@@ -8,7 +8,8 @@ In this files, you will find changes between java OMiSCID versions.
 *must: big constants are properly generated under dnssd but not properly read
 *must: solve the castor proliferation problem
 *must: find and kill all "< (that is manually generated xml)
-*Q: how is reflected in the dnssd txt record the fact that a connector has an udp port?
+*must: api fix on variable listeners
+*Q: how is reflected in the dnssd txt record the fact that a connector has an udp port? I think that we always use tcp to init connections so this is not a real question
 *should: do not query full description before needed
 *should: review, optimize and make safer the queries present under ServiceProxy (e.g. 2 queries are done to get a service global description)
 *should: make configurable (through Java and C++) the timeout for control queries
@@ -20,7 +21,9 @@ In this files, you will find changes between java OMiSCID versions.
 r
         fix:  problem with avahi and big txt records (services with many variables)
         fix:  problem with jmdns and big txt records (services with many variables)
+        fix:  can now safely listen to one variable multiple times with proper notification (was sending multiple notifications to each listener)
         impr: now queries complete service description only when needed (was basically asking to every service)
+        fix:  (gui) in case of subscription to remote variable changes, gui was not handling properly empty new value (it now does)
 
 1.1.0
 r2441
